--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>VCSCF</title>
 </head>
 <body>
-    <h1>Hey i'm Ishwa...!!! ,we r learning github!!</h1>
+    <h1>Hey i'm Ishwa..!!! ,we r learning github, today is 3 day!!</h1>
 </body>
 </html>
