--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Hey i'm Ishwa..!!! ,we r learning github, today is 3 day!!</h1>
+    
+    <h2>A gift is a special token of love, appreciation, or celebration that is given from one person to another. 
+        It holds the power to express heartfelt emotions and create lasting memories. Whether it’s a birthday, anniversary, holiday, or any other occasion, gifts play a significant role in conveying our feelings and making someone feel valued.
+         The act of giving a gift shows thoughtfulness, generosity, and a desire to bring joy to another person’s  life.</h2>
+
 </body>
 </html>
